# pyca

./: README.md  example.py  pyproject.toml
examples/game_of_life/: advancer.rle  c3_ships.rle  cambrian_explosion.rle  cordership_gun.rle  fermat_primes.rle  glider.rle  gosper_gun.rle  low_period.rle  oscillator_synthesis.rle  pyca.rle  smallest_low_period.rle  space_filler.rle
examples/wire_world/: and.rle  clocks.rle  multiplier_32_bit.rle  multiplier_8_bit.rle  primes.rle  unary_multiplier.rle
grids/game_of_life/: advancer.ca  c3_ships.ca  cambrian_explosion.ca  cordership_gun.ca  fermat_primes.ca  glider.ca  gosper_gun.ca  low_period.ca  oscillator_synthesis.ca  pyca.ca  smallest_low_period.ca  space_filler.ca
grids/wire_world/: circuit.ca  flip_flop.ca  memory_cell.ca  not.ca  or.ca  xor.ca
pyca/: __init__.py  cli.py  parser.py
pyca/automata/: __init__.py  base.py  brians_brain.py  game_of_life.py  langtons_ant.py  predator_prey.py  wire_world.py
pyca/parsers/: __init__.py  base.py  rle.py
